# DevLens-v3

./: LICENSE  README.md  architectural_review_v3.md  docker-compose.yml  run_e2e_compose.py
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3a2b1c0d_initial.py
backend/app/: main.py  worker.py
backend/app/ai/: analyzer.py  narrative.py  prompt.py  provider.py
backend/app/api/: analytics.py  badges.py
backend/app/benchmark/: __init__.py  golden.py  models.py  runner.py
backend/app/cli/: client.py  exceptions.py  formatter.py  main.py  output.py  security.py
backend/app/core/: config.py  config_loader.py  context.py  exceptions.py  logging.py
backend/app/database/: connection.py  models.py
backend/app/github/: __init__.py  client.py  parser.py
backend/app/jobs/: __init__.py  models.py  queue.py  worker.py
backend/app/models/: analysis.py  analytics.py  audit.py  github.py  request.py  webhook.py
backend/app/observability/: metrics.py  tracing.py
backend/app/rie/: __init__.py  analyzers.py  base.py  builder.py  orchestrator.py  pipeline.py  registry.py
backend/app/schemas/: devlens.schema.json
backend/app/scoring/: __init__.py  (+8 more)
backend/benchmarks/: run_benchmarks.py
backend/loadtests/: locustfile.py
backend/tests/: test_analytics.py  test_api.py  test_benchmark.py  test_cli.py  test_github_app.py  test_hardening.py  test_jobs.py  test_narrative.py  test_performance.py  test_persistence.py  test_platform.py  test_rie.py  test_scoring.py  test_security.py  test_webhooks.py
(+103 files in other folders)
