[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlens"
version = "3.0.0"
description = "DevLens Command Line Interface for automated repository auditing and intelligence"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.scripts]
devlens = "app.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
