[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlens"
version = "3.0.0"
description = "DevLens Command Line Interface for automated repository auditing and intelligence"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[all]==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "httpx==0.27.0",
    "groq==0.5.0",
    "python-dotenv==1.0.1",
    "pyjwt==2.13.0",
    "cryptography==49.0.0",
    "redis==8.0.1",
    "pyyaml==6.0.1",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "aiosqlite>=0.19.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
devlens = "app.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
